--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       e.preventDefault();
 
       emailjs.sendForm(
-        "service_i70peip",
+        "service_4to5clm",
         "template_iqh8z6n",
         this
       ).then(() => {
