--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@ input[type="submit"]:active{
 
   const btn = document.getElementById('button');
 
+  // Function to get current time in yy/mm/dd hh:mm:ss format
   function getCurrentTime() {
     const now = new Date();
     const yy = String(now.getFullYear()).slice(-2);
@@ -180,6 +181,12 @@ input[type="submit"]:active{
     const min = String(now.getMinutes()).padStart(2, '0');
     const ss = String(now.getSeconds()).padStart(2, '0');
     return `${yy}/${mm}/${dd} ${hh}:${min}:${ss}`;
+  }
+
+  // Function to get ?return=[url] from query parameters
+  function getReturnUrl() {
+    const params = new URLSearchParams(window.location.search);
+    return params.get('return');
   }
 
   document.getElementById('form').addEventListener('submit', function(event) {
@@ -197,7 +204,14 @@ input[type="submit"]:active{
       .then(() => {
         btn.value = 'Send Email';
         alert('Email sent successfully!');
-        this.reset();
+
+        // Redirect if ?return=URL exists
+        const returnUrl = getReturnUrl();
+        if (returnUrl) {
+          window.location.href = decodeURIComponent(returnUrl);
+        } else {
+          this.reset();
+        }
       }, (err) => {
         btn.value = 'Send Email';
         alert('Error: ' + JSON.stringify(err));
