--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                                                                                                                                                                                           </div>
 
                                                                                                                                                                                                             <!-- reCAPTCHA widget -->
-                                                                                                                                                                                                              <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
+                                                                                                                                                                                                              <div class="g-recaptcha" data-sitekey="6LclOD8sAAAAAIibsjpSp6p19ZKaRUjQgUI-GgFN"></div>
 
                                                                                                                                                                                                                 <input type="submit" id="button" value="Send Email">
                                                                                                                                                                                                                 </form>
