--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Frosted Glass Email Form with Captcha</title>
+<title>Contact Me</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
