--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="icon" type="image/png" href="image.png">
 <meta charset="UTF-8">
 <title>Contact Me</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
